<resources>
<string name="app_name">San Carlo - Italian Pizza \u0026 Food</string>
<string name="phone_number"> +420 777 777 777</string>
<string name="email"> sancarlo@sancarlo.cz</string>
<string name="map"> Dittrichova 20, 120 00 Praha 2</string>
<string name="logo_text"> San Carlo logo</string>
<string name="contacts"> Contacts:</string>
<string name="follow_us"> Follow us on:</string>
<string name="opening_hours"> Open everyday from 12:00 to 22:00</string>
<string name="button_text"> ORDER</string>
<string name="facebook"> https://www.facebook.com/sancarloprague/?fref=ts</string>
<string name="tripadvisor"> https://www.tripadvisor.it/Restaurant_Review-g274707-d7938899-Reviews-San_Carlo_Dittrichova-Prague_Bohemia.html</string>
</resources>

